--- a/index-page2.html
+++ b/index-page2.html
@@ -148,7 +148,26 @@
     <!-- START quick link -->
     <div class="container quick-link">
         <div class="quick-link-item">
-            <div class="col">
+            <ul>
+                <li> <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    <span>QUICK LINK :</span>
+                <li>
+                    <a href="#">Electronics</a>
+                </li>
+                <li><a href="#">Mobiles</a></li>
+                <li><a href="#">TV</a></li>
+                <li><a href="#">Washing Machine</a></li>
+                <li><a href="#">Cameras</a></li>
+                <li><a href="#">Gold Coins</a></li>
+                <li><a href="#">Geysers</a></li>
+                <li><a href="#">Furniture</a></li>
+                <li><a href="#">Refrigerators</a></li>
+                <li><a href="#">Laptops</a></li>
+                <li><a href="#">Bedsheets</a></li>
+                <li><a href="#">Sports Itms</a></li>
+                <li><a href="#">Lighting</a></li>
+            </ul>
+            <!-- <div class="col">
                 <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                 <span>QUICK LINK :</span>
 
@@ -192,6 +211,7 @@
             <div class="col">
                 <p>Lighting</p>
             </div>
+            -->
         </div>
     </div>
 
