--- a/index-page2.html
+++ b/index-page2.html
@@ -494,7 +494,7 @@
                         </div>
                         <div class="col item-variant">
                             <img src="/img/top-col-HOT+DEAS" alt="styler">
-                            <h5>Audio Splitter Cable - White</h5>
+                            <h5>Audio Splitter Cable </h5>
                             <p>$ 17.00</p>
                             <div class="rating-area">
                                 <input type="radio" id="star-5" name="rating" value="5">
@@ -572,7 +572,7 @@
                         </div>
                         <div class="col item-variant-health">
                             <img src="/img/BEAUTY.png" alt="BEAUTY">
-                            <h5> 5 Blade Razor with Trimmer </h5>
+                            <h5> 5 Blade Razor Trimmer </h5>
                             <p>$ 42.00</p>
                             <div class="rating-area">
                                 <input type="radio" id="star-5" name="rating" value="5">
@@ -589,7 +589,7 @@
                         </div>
                         <div class="col item-variant-health">
                             <img src="/img/BEAUTY.png" alt="BEAUTY">
-                            <h5>Nicx Body Perfume 122 ml</h5>
+                            <h5>Nicx Body Perfume </h5>
                             <p>$ 99.00</p>
                             <div class="rating-area">
                                 <input type="radio" id="star-5" name="rating" value="5">
@@ -609,7 +609,7 @@
                     <div class="button-col-health">
                         <div class="col item-variant-health">
                             <img src="/img/BEAUTY.png" alt="BEAUTY">
-                            <h5>Apollo Deodorant 150 ml</h5>
+                            <h5>Apollo Deodorant </h5>
                             <p>$ 110.00</p>
                             <div class="rating-area">
                                 <input type="radio" id="star-5" name="rating" value="5">
@@ -643,7 +643,7 @@
                         </div>
                         <div class="col item-variant-health">
                             <img src="/img/BEAUTY.png" alt="BEAUTY">
-                            <h5>Active Shave Lotion 100 ml</h5>
+                            <h5>Active Shave Lotion</h5>
                             <p>$ 54.00</p>
                             <div class="rating-area">
                                 <input type="radio" id="star-5" name="rating" value="5">
@@ -702,7 +702,7 @@
                     <div class="top-col-home">
                         <div class="col item-variant-home">
                             <img src="/img/HOME.png" alt="HOME">
-                            <h5>Plastic Steel Flask(750ml)</h5>
+                            <h5>Plastic Steel Flask</h5>
                             <p>$ 76.00</p>
                             <div class="rating-area">
                                 <input type="radio" id="star-5" name="rating" value="5">
